fix slider, welcome page background, mobile version project gaps

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -25,10 +25,22 @@ body{
 }
 .stop_load{ display:none; }
 .preloader{
-	margin: 20px auto;
+	margin: 0;
 	padding: 0;
 	width: 100%;
+	height: 22px;
+	position: absolute;
+	top: 49%; 
+	top:calc(50% - 11px); 
+	top: -webkit-calc(50% - 11px); 
+	top:-moz-calc(50% - 11px);
 	text-align: center;
+}
+.preloader img{
+	margin: 0;
+	padding: 0;
+	width: 22px;
+	height: 22px;
 }
 .cd-fail-message{
 	margin: 20px;
@@ -573,6 +585,18 @@ Contact page start
 	.owl-theme .owl-controls .owl-page span.owl-numbers{
 		width: 20px !important;
 	}
+	#gridx{
+		margin-left: -5px;
+		margin-right: -5px; 
+	}
+	.error-404-item{
+		padding-right: 5px;
+		padding-left: 5px;
+	}
+	.error-404-item p{
+		padding: 5px 0px !important;
+		margin: 0 0 10px 0 !important;
+	}
 }
 @media(max-width:768px){
 	.llogo{
@@ -710,9 +734,6 @@ Contact page start
 	} 
 	.error-404-text h1{
 		font-size: 44px !important;
-	}
-	.error-404-text p{
-		font-size: 26px !important;
 	}
 	.error-404-containerProject{
 		width: 80% !important; 
